apps/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipiece-frontend
  labels:
    app: ipiece-frontend
  annotations:
    # 🔥 같은 AZ에 있는 파드에게 우선 트래픽 전송 (AWS 비용 절감 & 속도 향상)
    service.kubernetes.io/topology-mode: "Auto"
spec:
  type: ClusterIP
  selector:
    app: ipiece-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
